--- a/pranshus-portfolio/package.json
+++ b/pranshus-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "pranshus-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://volt9801.github.io/portfolio",
+  "homepage": "https://volt9801.github.io/portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
